# pytorch-learning

./: $model_train  classy.py  main.py  model_trainer.py  pyproject.toml
chapters/: 0.ipynb  1-2.ipynb  1.ipynb  2.ipynb  model_checkpointv2.pth  utils.py
chapters/runs/classy_20250523002905/: events.out.tfevents.1747940345.sun-office-laptop.30076.5
chapters/runs/classy_20250523003233/: events.out.tfevents.1747940553.sun-office-laptop.30076.7
chapters/runs/classy_20250523003944/: events.out.tfevents.1747940984.sun-office-laptop.30076.9
chapters/runs/classy_20250523004320/: events.out.tfevents.1747941200.sun-office-laptop.31132.5
chapters/runs/classy_20250523004357/: events.out.tfevents.1747941237.sun-office-laptop.31132.7
chapters/runs/classy_20250523004402/: events.out.tfevents.1747941242.sun-office-laptop.31132.9
chapters/runs/classy_20250523004523/: events.out.tfevents.1747941323.sun-office-laptop.27600.3
chapters/runs/classy_20250523004617/: events.out.tfevents.1747941377.sun-office-laptop.27600.5
chapters/runs/classy_20250523004618/: events.out.tfevents.1747941378.sun-office-laptop.27600.7
chapters/runs/classy_20250523004619/: events.out.tfevents.1747941379.sun-office-laptop.27600.9
chapters/runs/test/: events.out.tfevents.1747605145.sun-office-laptop.6208.0  (+50 more)
chapters/v0/: model_config.py
chapters/v1/: data_preparation.py  model_config.py  model_training.py
chapters/v2/: data_preparation.py  model_config.py  model_training.py
chapters/v3/: data_preparation.py  model_config.py  model_training.py
step_by_step/: chapter1.ipynb
(+24 files in other folders)
