[project]
name = "pytorch-step-by-step"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "torch",
    "torchaudio",
    "torchvision",
    "torchviz>=0.0.3",
]
