[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "graphviz>=0.20.3",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.1",
  "scikit-learn>=1.6.1",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchviz>=0.0.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
